# 100xSchool

./: .gitignore  Cargo.toml  README.md  components.json  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
apps/backend/: Cargo.toml  project.json
apps/backend/src/: main.rs
apps/backend/src/handlers/: base.rs  mod.rs
apps/backend/src/routes/: route.rs
apps/frontend/: package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/frontend-e2e/: package.json  playwright.config.ts
apps/frontend/src/: main.tsx  styles.css
apps/frontend/src/app/: app.spec.tsx  app.tsx  nx-welcome.tsx
apps/frontend/src/contexts/: auth.context.tsx
apps/frontend/src/hooks/: useApi.ts
apps/frontend/src/pages/: academic-calendar.tsx  assessment-exams.tsx  course-management.tsx  fee-management.tsx  login.tsx  reports-analytics.tsx  student-assignments.tsx  student-attendance.tsx  student-courses.tsx  student-dashboard.tsx  student-exams.tsx  student-fees.tsx  student-grades.tsx  student-management.tsx  student-materials.tsx  student-profile.tsx  student-timetable.tsx  subjects.tsx  teacher-panel.tsx  timetable.tsx
apps/frontend/src/routes/: dashboard.tsx  index.tsx  layout.tsx
apps/frontend/src/services/: auth.service.ts  interceptor.service.ts  user.service.ts
