[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
