[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = "0.12.12"
validator = { version = "0.20.0", features = ["derive"] }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
db = { path="../../packages/db" }
serde_json = "1.0"
